v_utils_macros/tests/compile_fail/settings_unknown_field_value.stderr
error: unknown `flaten`; valid values are: flatten, skip, skip(flag), skip(env), default
 --> $DIR/v_utils_macros/tests/compile_fail/settings_unknown_field_value.rs:7:13
  |
7 |     #[settings(flaten)]
  |                ^^^^^^

error: aborting due to 1 previous error

